# options_wheel_tracker

./: .env.example  .env.example.prod  .gitignore  CLAUDE.md  Makefile
backend/: Cargo.toml
backend/src/: errors.rs  main.rs  routes.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 001_initial.sql  002_trade_quantity.sql  003_share_lot_sold.sql  004_soft_delete_trades.sql  005_roll_linking.sql
backend/src/handlers/: accounts.rs  calls.rs  dashboard.rs  history.rs  mod.rs  puts.rs  share_lots.rs  statistics.rs  yield_calc.rs
backend/src/models/: account.rs  mod.rs  share_lot.rs  trade.rs
docs/superpowers/plans/: 2026-03-22-options-wheel-tracker.md  2026-03-25-pr-revision-loop.md  2026-04-11-roll-linking.md
docs/superpowers/specs/: 2026-03-22-dev-prod-isolation-design.md  2026-03-25-pr-revision-loop-design.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/statistics/: page.tsx
frontend/src/components/dashboard/: ActivePositions.tsx  MetricCard.tsx
frontend/src/components/history/: FilterBar.tsx  LinkRollModal.tsx  TradeTable.tsx
frontend/src/components/layout/: AccountSelector.tsx  Sidebar.tsx
frontend/src/components/trades/: CallForm.tsx  CloseCallModal.tsx  ClosePutModal.tsx  (+2 more)
frontend/src/contexts/: AccountContext.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
scripts/: import_csv.py  issue-prompt-template.md  pre-commit  process_issues.py  refresh-dev-db.sh  revision-prompt-template.md  setup-cron.sh  test-migration.sh
(+3 files in other folders)
